@@ -18,7 +18,7 @@ indexes:
   - name: creationdate
     direction: desc
 
-# Used 2 times in query history.
+# Used 3 times in query history.
 - kind: Game
   properties:
   - name: owner
@@ -104,7 +104,7 @@ indexes:
   - name: cc_game
   - name: cc_score
 
-# Used once in query history.
+# Used 4 times in query history.
 - kind: Score
   ancestor: yes
   properties:
@@ -120,7 +120,7 @@ indexes:
   - name: cc_category
   - name: cc_score
 
-# Used 40 times in query history.
+# Used 43 times in query history.
 - kind: Score
   ancestor: yes
   properties:
